# deno_plugin_num_cpus

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
