[package]
name = "deno_plugin_num_cpus"
version = "0.1.2"
description = "Get the number of CPUs available on the current system for Deno."
authors = ["迷渡 <justjavac@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/justjavac/deno_plugin_num_cpus"
license = "MIT"
keywords = ["deno", "deno_plguin", "cpu", "cpus", "cores"]
categories = ["hardware-support"]

[lib]
crate-type = ["cdylib"]

[dependencies]
deno_core = "0.54.0"
num_cpus = "1.13.0"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"